--- a/vignettes/survival.Rmd
+++ b/vignettes/survival.Rmd
@@ -14,7 +14,7 @@ library(wesanderson)
 
 ## Subsequent events - deaths
 ```{r deaths, results="markup"}
-# get all of the subsequent diagnoses after the start point of the index ACS event
+# get all of the deaths after the start point of the index ACS event
 death_events <- msrv$mort$civil_reg |> 
   # Only cohort NHS numbers
   dplyr::right_join(data.frame("nhs_number" = cohort_ids), by="nhs_number", copy=TRUE) |>
@@ -57,7 +57,7 @@ admission_code_map <- acsprojectns::get_codes(system.file("admission_method_code
                                                   TRUE ~ "other")) |>
   dplyr::select(admission_method_code, adm_method_str)
 
-# get all of the subsequent diagnoses after the start point of the index ACS event
+# get all of the subsequent diagnoses after the end point of the index ACS event
 subsequent_diagnoses <- msrv$sus$apc_spells_diagnosis |>
   # Only cohort NHS numbers
   dplyr::right_join(data.frame("nhs_number" = cohort_ids), by="nhs_number", copy=TRUE) |>
@@ -75,10 +75,8 @@ subsequent_diagnoses <- msrv$sus$apc_spells_diagnosis |>
   dplyr::mutate(nhs_number = as.character(nhs_number)) |>
   # join the index spell data
   dplyr::right_join(index_acs |> dplyr::select(nhs_number, index_start=spell_start, index_end=spell_end), by="nhs_number") |>
-  # make sure that the spell comes after (or at the same time as) the start of the index ACS spell
-  
+  # make sure that the spell comes after the end of the index ACS spell
   dplyr::filter(event_start > index_end) |>
-  
   #dplyr::filter(event_start >= index_start) |>
   # ensure all columns characters
   dplyr::mutate(dplyr::across(dplyr::matches("primary_diagnosis_icd|secondary_diagnosis_[0-9]+_icd"),
@@ -119,156 +117,127 @@ subsequent_diagnoses <- msrv$sus$apc_spells_diagnosis |>
 ```
 
 ```{r subsequent_procedures, results="markup"}
-# get all of the subsequent diagnoses after the start point of the index ACS event
-# subsequent_procedures <- msrv$sus$apc_spells_diagnosis |>
+# read in the code mappnigs for angiograms, PCI, and coronary artery bypass
+opcs_angio_codes <- read.csv(system.file("opcs_codes/coronary_angiogram_procedure_codes.csv", package = "acsprojectns"))
+opcs_pci_codes   <- read.csv(system.file("opcs_codes/pci_procedure_codes.csv", package = "acsprojectns"))
+opcs_cabg_codes  <- read.csv(system.file("opcs_codes/cabg_procedure_codes.csv", package = "acsprojectns"))
+opcs_codes       <- rbind(opcs_angio_codes, opcs_pci_codes, opcs_cabg_codes)
+
+subsequent_procedures <- msrv$sus$apc_spells_procedures |>
   # Only cohort NHS numbers
-  
-  
-  
-#   # read in the code mappnigs for angiograms, PCI, and coronary artery bypass
-# opcs_angio_codes <- read.csv(system.file("opcs_codes/coronary_angiogram_procedure_codes.csv", package = "acsprojectns"))
-# opcs_pci_codes   <- read.csv(system.file("opcs_codes/pci_procedure_codes.csv", package = "acsprojectns"))
-# opcs_cabg_codes  <- read.csv(system.file("opcs_codes/cabg_procedure_codes.csv", package = "acsprojectns"))
-# opcs_codes       <- rbind(opcs_angio_codes, opcs_pci_codes, opcs_cabg_codes)
-# 
-# index_acs_procedures <- msrv$sus$apc_spells_procedures |>
-#   # Only cohort NHS numbers
-#   dplyr::filter(nhs_number %in% cohort_ids) |>
-#   # Time window
-#   dplyr::filter(spell_start >= acs_date_min & spell_end <= acs_date_max) |>
-#   # select the needed columns
-#   dplyr::select(nhs_number, start=spell_start, end=spell_end, dplyr::contains("procedure")) |>
-#   # collect to local
-#   icdb::run() |>
-#   # shouldnt need to do this at work 
-#   dplyr::mutate(nhs_number = as.character(nhs_number)) |>
-#   # join the index spell data
-#   dplyr::right_join(index_acs |> dplyr::select(nhs_number, spell_start, spell_end), by="nhs_number") |>
-#   # make sure that the spell overlaps the index spell 
-#   dplyr::filter(lubridate::int_overlaps(int1 = lubridate::interval(start, end),
-#                                         int2 = lubridate::interval(spell_start, spell_end))) |>
-#   dplyr::select(nhs_number, dplyr::contains("procedure")) |>
-#   dplyr::mutate(dplyr::across(dplyr::everything(), as.character)) |>
-#   tidyr::pivot_longer(-nhs_number, names_to=c("procedure", ".value"), names_pattern="(.*)_(\\w+)") |>
-#   dplyr::left_join(opcs_codes, by=c("opcs"="opcs_codes")) |>
-#   dplyr::filter(!is.na(group)) |>
-#   dplyr::select(-c(procedure, opcs, description)) |>
-#   dplyr::group_by(nhs_number, group) |>
-#   dplyr::slice_min(date, with_ties=FALSE) |>
-#   tidyr::pivot_wider(names_from=group, values_from=date) |>
-#   dplyr::right_join(data.frame("nhs_number"=cohort_ids), by="nhs_number")
-
-
-# end goal
-  # dplyr::select(nhs_number, event_desc, event_start, event_end)
+  dplyr::filter(nhs_number %in% cohort_ids) |>
+  #dplyr::right_join(data.frame("nhs_number" = cohort_ids), by="nhs_number", copy=TRUE) |>
+  # Time window - start of the cohort window to present
+  dplyr::filter(spell_start >= acs_date_min) |>
+  # select the needed columns
+  dplyr::select(nhs_number, proc_spell_start=spell_start, proc_spell_end=spell_end, dplyr::contains("procedure")) |>
+  # collect to local
+  icdb::run() |>
+  # shouldnt need to do this at work
+  dplyr::mutate(nhs_number = as.character(nhs_number)) |>
+  # join the index spell data
+  dplyr::right_join(index_acs |> dplyr::select(nhs_number, index_start=spell_start, index_end=spell_end), by="nhs_number") |>
+  # make sure that the spell comes after the end of the index ACS spell
+  dplyr::filter(proc_spell_start > index_end) |>
+  dplyr::select(-c(proc_spell_start, proc_spell_end)) |>
+  #dplyr::filter(event_start >= index_start) |>
+  # ensure all columns characters
+  dplyr::mutate(dplyr::across(dplyr::contains("procedure"), ~ as.character(.x))) |>
+  # pivot long
+  tidyr::pivot_longer(-c(nhs_number, index_start, index_end), names_to=c("procedure", ".value"), names_pattern="procedure_(\\d+)_(\\w+)", values_drop_na=TRUE) |>
+  dplyr::left_join(opcs_codes, by=c("opcs"="opcs_codes")) |>
+  dplyr::mutate(event_start = date, event_end = date) |>
+  # extract procedure grouping / coding
+  dplyr::mutate(event_desc = dplyr::if_else(!is.na(group), group, opcs)) |>
+  # only take id, spell dates and diagnoses
+  dplyr::select(nhs_number, event_desc, event_start, event_end)
 ```
 
 ```{r subsequent_measurements, results="markup"}
-# get all of the subsequent diagnoses after the start point of the index ACS event
-# subsequent_measurements <- 
+subsequent_measurements <- msrv$swd$swd_measurement |>
   # Only cohort NHS numbers
-  
-  
-#   
-#   # Define the blood pressure medications
-# diuretics <- c("chlorthalidone", "chlorothiazide", "hydrochlorothiazide", "indapamide", "metolazone", "amiloride", "spironolactone", "triamterene", "bumetanide", "furosemide", "torsemide")
-# beta_blockers <- c("acebutolol", "atenolol", "betaxolol", "bisoprolol", "metoprolol", "nadolol", "pindolol", "propranolol", "solotol", "timolol")
-# ace_inhibitors <- c("benazepril", "captopril", "enalapril", "fosinopril", "lisinopril", "moexipril", "perindopril", "quinapril", "ramipril", "trandolapril")
-# arbs <- c("candesartan", "eprosartan", "irbesartan", "losartan", "telmisartan", "valsartan")
-# ccbs <- c("amlodipine", "diltiazem", "felodipine", "isradipine", "nicardipine", "nifedipine", "nisoldipine", "verapamil")
-# alpha_blockers <- c("doxazosin", "prazosin", "terazosin")
-# a_b_blockers <- c("carvedilol", "labetalol")
-# central_agonists <- c("methyldopa", "clonidine", "guanfacine")
-# vasodilators <- c("hydralazine", "minoxidil")
-# mras <- c("eplerenone","spironolactone")
-# renin_inhibitors <- c("aliskiren")
-# blood_pressure_meds <- c(diuretics, beta_blockers, ace_inhibitors, arbs, ccbs, alpha_blockers, a_b_blockers, central_agonists, vasodilators, mras, renin_inhibitors)
-# 
-# # Get the medication data
-# med_filter_string <- "(?i)([A-z ]+)(\\d+\\.?\\d*)?([A-z]+)?[ ]*(?:[A-z]*)"
-# medications <- svr$MODELLING_SQL_AREA$swd_measurement %>%
-#   select(nhs_number, measurement_name, measurement_value) %>%
-#   filter(measurement_name == "blood_pressure",
-#          measurement_value != "unknown",
-#          !is.na(measurement_value)) %>%
-#   distinct(nhs_number) %>%
-#   # joins much quicker than passing in loads of IDs
-#   left_join( svr$MODELLING_SQL_AREA$swd_activity %>% select(nhs_number, prescription_date = arr_date, pod_l1, spec_l1b),
-#              by = "nhs_number") %>%
-#   filter(pod_l1 == "primary_care_prescription") %>%
-#   filter(spec_l1b  %LIKE% '%chlorthalidone%' | spec_l1b  %LIKE% '%chlorothiazide%' | spec_l1b  %LIKE% '%hydrochlorothiazide%' | spec_l1b  %LIKE% '%indapamide%' | spec_l1b  %LIKE% '%metolazone%' | spec_l1b  %LIKE% '%amiloride%' | spec_l1b  %LIKE% '%spironolactone%' | spec_l1b  %LIKE% '%triamterene%' | spec_l1b  %LIKE% '%bumetanide%' | spec_l1b  %LIKE% '%furosemide%' | spec_l1b  %LIKE% '%torsemide%' | spec_l1b  %LIKE% '%acebutolol%' | spec_l1b  %LIKE% '%atenolol%' | spec_l1b  %LIKE% '%betaxolol%' | spec_l1b  %LIKE% '%bisoprolol%' | spec_l1b  %LIKE% '%metoprolol%' | spec_l1b  %LIKE% '%nadolol%' | spec_l1b  %LIKE% '%pindolol%' | spec_l1b  %LIKE% '%propranolol%' | spec_l1b  %LIKE% '%solotol%' | spec_l1b  %LIKE% '%timolol%' | spec_l1b  %LIKE% '%benazepril%' | spec_l1b  %LIKE% '%captopril%' | spec_l1b  %LIKE% '%enalapril%' | spec_l1b  %LIKE% '%fosinopril%' | spec_l1b  %LIKE% '%lisinopril%' | spec_l1b  %LIKE% '%moexipril%' | spec_l1b  %LIKE% '%perindopril%' | spec_l1b  %LIKE% '%quinapril%' | spec_l1b  %LIKE% '%ramipril%' | spec_l1b  %LIKE% '%trandolapril%' | spec_l1b  %LIKE% '%candesartan%' | spec_l1b  %LIKE% '%eprosartan%' | spec_l1b  %LIKE% '%irbesartan%' | spec_l1b  %LIKE% '%losartan%' | spec_l1b  %LIKE% '%telmisartan%' | spec_l1b  %LIKE% '%valsartan%' | spec_l1b  %LIKE% '%amlodipine%' | spec_l1b  %LIKE% '%diltiazem%' | spec_l1b  %LIKE% '%felodipine%' | spec_l1b  %LIKE% '%isradipine%' | spec_l1b  %LIKE% '%nicardipine%' | spec_l1b  %LIKE% '%nifedipine%' | spec_l1b  %LIKE% '%nisoldipine%' | spec_l1b  %LIKE% '%verapamil%' | spec_l1b  %LIKE% '%doxazosin%' | spec_l1b  %LIKE% '%prazosin%' | spec_l1b  %LIKE% '%terazosin%' | spec_l1b  %LIKE% '%carvedilol%' | spec_l1b  %LIKE% '%labetalol%' | spec_l1b  %LIKE% '%methyldopa%' | spec_l1b  %LIKE% '%clonidine%' | spec_l1b  %LIKE% '%guanfacine%' | spec_l1b  %LIKE% '%hydralazine%' | spec_l1b  %LIKE% '%minoxidil%' | spec_l1b  %LIKE% '%eplerenone%' | spec_l1b  %LIKE% '%spironolactone%' | spec_l1b  %LIKE% '%aliskiren%') %>%
-#   select(nhs_number, prescription_date, spec_l1b) %>%
-#   show_query() %>%
-#   run() %>%
-#   filter(nhs_number %in% !!blood_pressures$nhs_number) %>%
-#   mutate(med_name  = trimws(stringr::str_match(spec_l1b, pattern = med_filter_string)[,2]),
-#          med_dose  = stringr::str_match(spec_l1b, pattern = med_filter_string)[,3],
-#          med_units = stringr::str_match(spec_l1b, pattern = med_filter_string)[,4]) %>%
-# 
-#   # check if any NAs generated here
-# 
-#   select(nhs_number, prescription_date, med_name) %>%
-#   group_by(nhs_number, prescription_date) %>%
-#   mutate(num_meds = n_distinct(med_name)) %>%
-#   group_by(nhs_number) %>%
-#   #arrange(prescription_date, .by_group=T) %>%
-#   summarise(min_num_meds        = min(num_meds, na.rm=T),
-#             #date_min_num_meds   = prescription_date[which.min(num_meds)],
-#             max_num_meds        = max(num_meds, na.rm=T),
-#             #date_max_num_meds   = prescription_date[which.max(num_meds)],
-#             avg_num_meds        = mean(num_meds, na.rm=T)) %>%
-#             # ,
-#             # interval_gteq3_meds = interval(prescription_date[which.first(num_meds>=3)],
-#             #                                prescription_date[which.last(num_meds>=3)], tzone="GMT")) %>%
-#   ungroup()
-# 
-# # Combine the blood pressure data, age, and medication data
-# # high_bp_and_gteq3_meds = int_overlaps(interval_hypertensive, interval_gteq3_meds),
-# data <- blood_pressures %>%
-#   left_join(medications, by="nhs_number") %>%
-#   mutate(max_num_meds = replace_na(max_num_meds, 0),
-#          age          = replace_na(age, 70),
-#          bp_control_cat_any = case_when(
-#          max_num_meds>=3 & age<80  & (sbp_hi>=140 | dbp_hi>=90) ~ "resistant HTN (>=3 meds, any BP)",
-#          max_num_meds>=3 & age>=80 & (sbp_hi>=150 | dbp_hi>=90) ~ "resistant HTN (>=3 meds, any BP)",
-#          max_num_meds<3  & age<80  & (sbp_hi>=140 | dbp_hi>=90) ~ "uncontrolled HTN (<=2 meds, any BP)",
-#          max_num_meds<3  & age>=80 & (sbp_hi>=150 | dbp_hi>=90) ~ "uncontrolled HTN (<=2 meds, any BP)",
-#          max_num_meds==0 ~ "normal BP (0 meds)",
-#          max_num_meds<3  ~ "controlled HTN (<=2 meds, any BP)",
-#          max_num_meds>=3 ~ "controlled HTN (>=3 meds, any BP)",
-#          TRUE ~ "error"),
-#     bp_control_cat_any = factor(bp_control_cat_any, levels = c("resistant HTN (>=3 meds, any BP)",
-#                                                                "uncontrolled HTN (<=2 meds, any BP)",
-#                                                                "controlled HTN (>=3 meds, any BP)",
-#                                                                "controlled HTN (<=2 meds, any BP)",
-#                                                                "normal BP (0 meds)")),
-#     bp_control_cat_mean = case_when(
-#       max_num_meds>=3 & age<80  & (sbp_av>=140 | dbp_av>=90) ~ "resistant HTN (>=3 meds, mean BP)",
-#       max_num_meds>=3 & age>=80 & (sbp_av>=150 | dbp_av>=90) ~ "resistant HTN (>=3 meds, mean BP)",
-#       max_num_meds<3  & age<80  & (sbp_av>=140 | dbp_av>=90) ~ "uncontrolled HTN (<=2 meds, mean BP)",
-#       max_num_meds<3  & age>=80 & (sbp_av>=150 | dbp_av>=90) ~ "uncontrolled HTN (<=2 meds, mean BP)",
-#       max_num_meds==0 & age<80  & (sbp_av<140  | dbp_av<90 ) ~ "normal BP (0 meds, mean BP)",
-#       max_num_meds==0 & age>=80 & (sbp_av<150  | dbp_av<90 ) ~ "normal BP (0 meds, mean BP)",
-#       max_num_meds<3  & age<80  & (sbp_av<140  & dbp_av<90 ) ~ "controlled HTN (<=2 meds, mean BP)",
-#       max_num_meds<3  & age>=80 & (sbp_av<150  & dbp_av<90 ) ~ "controlled HTN (<=2 meds, mean BP)",
-#       max_num_meds>=3 & age<80  & (sbp_av<140  & dbp_av<90 ) ~ "controlled HTN (>=3 meds, mean BP)",
-#       max_num_meds>=3 & age>=80 & (sbp_av<150  & dbp_av<90 ) ~ "controlled HTN (>=3 meds, mean BP)",
-#       TRUE ~ "error"),
-#     bp_control_cat_mean = factor(bp_control_cat_mean, levels = c("resistant HTN (>=3 meds, mean BP)",
-#                                                                  "uncontrolled HTN (<=2 meds, mean BP)",
-#                                                                  "controlled HTN (>=3 meds, mean BP)",
-#                                                                  "controlled HTN (<=2 meds, mean BP)",
-#                                                                  "normal BP (0 meds, mean BP)")),
-#     age_cat = cut(age, right=FALSE, breaks=age_bands, labels=age_band_labs)
-#   )
-  
-  # end goal
-  # dplyr::select(nhs_number, event_desc, event_start, event_end)
+  dplyr::filter(nhs_number %in% cohort_ids) |>
+  #dplyr::right_join(data.frame("nhs_number" = cohort_ids), by="nhs_number", copy=TRUE) |>
+  # Time window - start of the cohort window to present
+  dplyr::filter(measurement_date >= acs_date_min) |>
+  # select the needed columns
+  dplyr::select(nhs_number, event_start=measurement_date, event_end=measurement_date, measurement_value, measurement_name) |>
+  # collect to local
+  icdb::run() |>
+  # shouldnt need to do this at work
+  dplyr::mutate(nhs_number = as.character(nhs_number)) |>
+  # join the index spell data
+  dplyr::right_join(index_acs |> dplyr::select(nhs_number, index_start=spell_start, index_end=spell_end), by="nhs_number") |>
+  # make sure that the spell comes after the end of the index ACS spell
+#dplyr::filter(event_start > index_end) |>
+  #dplyr::filter(event_start >= index_start) |>
+  # extract procedure grouping / coding
+  # only take id, spell dates and event description
+  dplyr::select(nhs_number, event_desc=measurement_name, event_start, event_end)
+```
+
+```{r subsequent_prescriptions, results="markup"}
+# Low dose statin therapy without ezetimibe - # low dose = simva 10, prava 10-20, lova 20, fluva 20-40, pitva 1            https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.uspharmacist.com%2Farticle%2Flipidlowering-therapies-a-review-of-current-and-future-options&psig=AOvVaw1oUjYp0LCmvmyKdwPQM3UM&ust=1649363828741000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCMDY-pqlgPcCFQAAAAAdAAAAABAD
+med_filter_string <- "(?i)([A-z ]+)(\\d+\\.?\\d*)?([A-z]+)?[ ]*(?:[A-z]*)"
+
+subsequent_prescriptions <- msrv$swd$swd_activity |>
+  # Only cohort NHS numbers
+  dplyr::filter(nhs_number %in% cohort_ids) |>
+  #dplyr::right_join(data.frame("nhs_number" = cohort_ids), by="nhs_number", copy=TRUE) |>
+  # Time window - start of the cohort window to present
+  dplyr::filter(arr_date >= acs_date_min) |>
+  # select the needed columns
+  dplyr::select(nhs_number, 
+                event_start=arr_date, 
+                event_end=dep_date, 
+                event_type=pod_l1,#primary_care_prescription
+                event_info=spec_l1b) |>
+  # collect to local
+  icdb::run() |>
+  # shouldnt need to do this at work
+  dplyr::mutate(nhs_number = as.character(nhs_number)) |>
+  # join the index spell data
+  dplyr::right_join(index_acs |> dplyr::select(nhs_number, index_start=spell_start, index_end=spell_end), by="nhs_number") |>
+  # make sure that the spell comes after the end of the index ACS spell
+  dplyr::filter(event_start > index_end, 
+                event_type=="primary_care_prescription") |>
+  #dplyr::filter(event_start >= index_start) |>
+  # prescription grouping / coding
+  dplyr::mutate(medication_name   = tolower(trimws(stringr::str_match(event_info, pattern = med_filter_string)[,2])),
+                medication_dose   = stringr::str_match(event_info, pattern = med_filter_string)[,3],
+                medication_units  = stringr::str_match(event_info, pattern = med_filter_string)[,4], 
+                event_desc = dplyr::case_when(
+                  grepl("edoxaban", medication_name) ~ "testing edoxaban",
+                  
+                  grepl("inclisiran", medication_name) ~ "inclisiran", 
+                  # High dose statin therapy
+                  (grepl("atorvastatin", medication_name) & medication_dose>=40) |
+                  (grepl("rosuvastatin", medication_name) & medication_dose>=20) |
+                  (grepl("simvastatin",  medication_name) & medication_dose>=80) ~ "high_statin",
+                  # Moderate dose statin therapy
+                  (grepl("atorvastatin", medication_name) & medication_dose<40)  |
+                  (grepl("rosuvastatin", medication_name) & medication_dose<20)  |
+                  (grepl("fluvastatin",  medication_name) & medication_dose>40)  |
+                  (grepl("pravastatin",  medication_name) & medication_dose>=40) |
+                  (grepl("simvastatin",  medication_name) & medication_dose>=20) ~ "mod_statin",
+                  # Low dose statin therapy
+                  (grepl("fluvastatin",  medication_name) & medication_dose<=40) |
+                  (grepl("pravastatin",  medication_name) & medication_dose<40)  |
+                  (grepl("simvastatin",  medication_name) & medication_dose<20) ~ "low_statin",
+                  
+                  TRUE ~ NA_character_)) |>
+  # only take id, spell dates and event description
+  dplyr::select(nhs_number, event_desc, event_start, event_end)
+
 ```
 
 ```{r subsequent_events, results="markup"}
 # combined
-all_subsequent_events <- dplyr::bind_rows(subsequent_diagnoses, death_events) |>
+all_subsequent_events <- dplyr::bind_rows(subsequent_diagnoses,
+                                          subsequent_procedures,
+                                          subsequent_measurements,
+                                          subsequent_prescriptions,
+                                          death_events) |>
   # keep only deaths and emergency admissions
   dplyr::filter(grepl("emergency$|^death", event_desc)) |>
   # keep all the nhs numbers represented
@@ -314,9 +283,7 @@ outcome_groupings = list("any_death" = "death")
 #                                            "death_cardiac_arrest"))
 
 any_death <- acsprojectns::create_survival_timings(all_subsequent_events, outcome_groupings) |> 
-  dplyr::left_join(dat_demographics |> dplyr::select(nhs_number, fudge_cambridge_segment), by="nhs_number") |>
-  # wont need this next line after moving to the function
-  dplyr::mutate(tstop = dplyr::if_else(tstop==0|tstart==tstop, tstop+0.01, tstop))
+  dplyr::left_join(dat_demographics |> dplyr::select(nhs_number, fudge_cambridge_segment), by="nhs_number")
 
 # Create the Survival object - for any readmission
 surv_tt_obj_any_read <- survival::Surv(any_death$tstart, any_death$tstop, any_death$status)
